# GG-843 Fixed scrollbars under mac.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -980,19 +980,20 @@ label {
 .fa-chevron-circle-down {
     color: $brand-primary;
     margin-right: 5px;
-    font-size: 16px;
 }
 
 .fa-chevron-circle-up {
     color: $brand-primary;
     margin-right: 5px;
-    font-size: 16px;
 }
 
 .fa-chevron-circle-right {
     color: $brand-primary;
     margin-right: 5px;
-    font-size: 16px;
+
+    font-size: 15px;
+
+    line-height: $line-height-base;
 }
 
 label.required:after {
@@ -1157,6 +1158,10 @@ a {
 .advanced-options {
     @extend .section;
     margin-bottom: 20px;
+
+    i {
+        font-size: 16px;
+    }
 }
 
 .margin-left-dflt {
@@ -1448,4 +1453,33 @@ a {
 
 button.dropdown-toggle {
     margin-right: 5px;
+}
+
+// Prevent scroll bars from being hidden for OS X.
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 11px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 11px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 2px solid white; /* should match background, can't be transparent */
+    background-color: rgba(0, 0, 0, .5);
+}
+
+::-webkit-scrollbar-track {
+    background-color: #fff;
+    border-radius: 8px;
+}
+
+.btn:focus {
+    outline: none;
+    border: 1px solid #ccc;
 }
